@@ -1,3 +1,9 @@
+2004-07-31  Michael Chastain  <mec.gnu@mindspring.com>
+
+	* gdb.cp/classes.exp: Accept more varieties of ptype output.
+	Accept more values of vtbl pointer.  Remove some messages
+	about "obsolete gcc or gdb".
+
 2004-07-30  Michael Chastain  <mec.gnu@mindspring.com>
 
 	* gdb.cp/classes.exp: Accept more varieties of ptype output.
